--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
+  title:        "RO"      # Project title
+  author:       "Babu"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "Ring oscillator"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -17,16 +17,20 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
-
+    - "tt_um_ro.v"
+    - "ro_buffer.v"
+    - "ro.v"
+    - "cinv.v"
+    - "ro2.v"
+    - "cinv2.v"
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
+  ui[0]: "RO1 enable"
+  ui[1]: "RO2 enable"
+  ui[2]: "Out sel 0"
+  ui[3]: "Out sel 1"
+  ui[4]: "Out sel 2"
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
